# claw-link

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md
.obsidian/: workspace.json
claw-agent/: Dockerfile  agent.py  fly-alice.toml  fly-bob.toml  requirements.txt  startup.sh
docs/: agent-setup-guide.md  index.html  protocol.md  social-rules-guide.md
docs/site/: index.html
mcp-tool/: README.md  pyproject.toml
mcp-tool/claw_link/: __init__.py  __main__.py  cli.py  client.py  crypto.py  server.py  storage.py
mcp-tool/claw_link/defaults/: config.yaml  social_rules.md
relay/: Dockerfile  fly.toml  pyproject.toml
relay/relay/: config.py  database.py  main.py  models.py  schemas.py  webhook.py
relay/relay/routes/: events.py  friends.py  messages.py  registry.py
relay/tests/: conftest.py  test_events.py  test_friends.py  test_messages.py  test_registry.py
tests/: e2e_test.py
